@@ -1,3 +1,13 @@
+2014-07-15  Eva Balazsfalvi  <evab.u-szeged@partner.samsung.com>
+
+        Buildfix if LLINT_SLOW_PATH_TRACING is enabled
+        https://bugs.webkit.org/show_bug.cgi?id=133790
+
+        Reviewed by Mark Lam.
+
+        * llint/LLIntSlowPaths.cpp:
+        (JSC::LLInt::LLINT_SLOW_PATH_DECL):
+
 2014-07-14  Filip Pizlo  <fpizlo@apple.com>
 
         Allow for Int52Rep to see things other than Int32, and make this testable
